Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51248

Plugins in QtWayland do not set PLUGIN_CLASS_NAME

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 2
    • 5.6.0 Beta
    • QPA: Wayland
    • None

    Description

      PLUGIN_CLASS_NAME is used to generate .cmake files and when it is not set, plugins use the same output file name: Qt5Gui_.cmake
      All platform plugins also use the same class name, which will again cause conflicts when cmake files are generated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes