Set PLUGIN_CLASS_NAME in .pro files

This fixes static linking and cmake config file generation.

In some cases, the class was renamed for disambiguation or just
uniformity.

Task-number: QTBUG-51248
Change-Id: Ibdce2e1b6a52312f84301c426632e94deeb567bd
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>