src/plugins/decorations/bradient/bradient.pro
@@ -8,4 +8,5 @@ SOURCES += main.cpp
 QMAKE_USE += wayland-client
 
 PLUGIN_TYPE = wayland-decoration-client
+PLUGIN_CLASS_NAME = QWaylandBradientDecorationPlugin
 load(qt_plugin)
