src/plugins/hardwareintegration/compositor/xcomposite-glx/xcomposite-glx.pro
@@ -8,4 +8,5 @@ SOURCES += \
 include(../../../../hardwareintegration/compositor/xcomposite-glx/xcomposite-glx.pri)
 
 PLUGIN_TYPE = wayland-graphics-integration-server
+PLUGIN_CLASS_NAME = QWaylandXCompositeGlxClientBufferIntegrationPlugin
 load(qt_plugin)
