src/plugins/shellintegration/ivi-shell/ivi-shell.pro
@@ -1,4 +1,5 @@
 PLUGIN_TYPE = wayland-shell-integration
+PLUGIN_CLASS_NAME = QWaylandIviShellIntegrationPlugin
 load(qt_plugin)
 
 QT += gui-private waylandclient-private
